<resources>
    <string name="app_name">Easy Films!</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Account</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign</string>
    <string name="action_regist">register</string>
    <string name="back_pc">Back to personal center</string>
    <string name="action_remember">remember the password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
